Fix data loading issues and update navigation order
Co-authored-by: ParcMagScene <210955103+ParcMagScene@users.noreply.github.com>